tests/core_tests/core_tests.exp
Error: map.js:23
 23:     let x = new Map(['foo', 123]); // error
                         ^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
542:     constructor(iterable: ?Iterable<[K, V]>): void;
                                ^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/core.js:542
  Property `@@iterator` is incompatible:
    197:     @@iterator(): Iterator<T>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with. See lib: <BUILTINS>/core.js:197
    503:     @@iterator(): $Iterator<Yield,Return,Next>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:503
      The return is incompatible:
        197:     @@iterator(): Iterator<T>;
                               ^^^^^^^^^^^ $Iterator. Has some incompatible type argument with. See lib: <BUILTINS>/core.js:197
        503:     @@iterator(): $Iterator<Yield,Return,Next>;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $Iterator. See lib: <BUILTINS>/core.js:503
          Type argument `Yield` is incompatible:
             23:     let x = new Map(['foo', 123]); // error
                                      ^^^^^ string. This type is incompatible with
            542:     constructor(iterable: ?Iterable<[K, V]>): void;
                                                     ^^^^^^ tuple type. See lib: <BUILTINS>/core.js:542

Error: map.js:23
 23:     let x = new Map(['foo', 123]); // error
                         ^^^^^^^^^^^^ array literal. This type is incompatible with the expected param type of
542:     constructor(iterable: ?Iterable<[K, V]>): void;
                                ^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/core.js:542
  Property `@@iterator` is incompatible:
    197:     @@iterator(): Iterator<T>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with. See lib: <BUILTINS>/core.js:197
    503:     @@iterator(): $Iterator<Yield,Return,Next>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:503
      The return is incompatible:
        197:     @@iterator(): Iterator<T>;
                               ^^^^^^^^^^^ $Iterator. Has some incompatible type argument with. See lib: <BUILTINS>/core.js:197
        503:     @@iterator(): $Iterator<Yield,Return,Next>;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $Iterator. See lib: <BUILTINS>/core.js:503
          Type argument `Yield` is incompatible:
             23:     let x = new Map(['foo', 123]); // error
                                             ^^^ number. This type is incompatible with
            542:     constructor(iterable: ?Iterable<[K, V]>): void;
                                                     ^^^^^^ tuple type. See lib: <BUILTINS>/core.js:542

Error: map.js:24
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                      ^^^^^^^^^^^^^^^^^^^^^^^ Map. Has some incompatible type argument with
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                ^^^^^^^^^^^^^^^^^^^ Map
  Type argument `K` is incompatible:
     24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                    ^^^^^ string. This type is incompatible with
     24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                        ^^^^^^ number

Error: map.js:24
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                      ^^^^^^^^^^^^^^^^^^^^^^^ Map. Has some incompatible type argument with
 24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                ^^^^^^^^^^^^^^^^^^^ Map
  Type argument `V` is incompatible:
     24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                           ^^^ number. This type is incompatible with
     24:     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                ^^^^^^ string

Error: map.js:29
 29:     (x.get('foo'): boolean); // error, string | void
          ^^^^^^^^^^^^ Cannot cast `x.get(...)` to boolean because number [1] is incompatible with boolean [2].
  References:
   28:   function(x: Map<string, number>) {
                                 ^^^^^^ [1]: number
   29:     (x.get('foo'): boolean); // error, string | void
                          ^^^^^^^ [2]: boolean

Error: map.js:29
 29:     (x.get('foo'): boolean); // error, string | void
          ^^^^^^^^^^^^ Cannot cast `x.get(...)` to boolean because undefined [1] is incompatible with boolean [2].
  References:
  547:     get(key: K): V | void;
                            ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:547
   29:     (x.get('foo'): boolean); // error, string | void
                          ^^^^^^^ [2]: boolean

Error: map.js:30
 30:     x.get(123); // error, wrong key type
               ^^^ number. This type is incompatible with the expected param type of
 28:   function(x: Map<string, number>) {
                       ^^^^^^ string

Error: regexp.js:26
 26:     RegExp('foo', 'z'); // error
                       ^^^ string literal `z`. This type is incompatible with
333:     static (pattern: string | RegExp, flags?: RegExp$flags): RegExp;
                                                   ^^^^^^^^^^^^ RegExp$flags. See lib: <BUILTINS>/core.js:333
   26:     RegExp('foo', 'z'); // error
                         ^^^ `z` is not a member of the set

Error: regexp.js:27
 27:     new RegExp('foo', 'z'); // error
                           ^^^ string literal `z`. This type is incompatible with
335:     constructor(pattern: string | RegExp, flags?: RegExp$flags): RegExp;
                                                       ^^^^^^^^^^^^ RegExp$flags. See lib: <BUILTINS>/core.js:335
   27:     new RegExp('foo', 'z'); // error
                             ^^^ `z` is not a member of the set

Error: weakset.js:19
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                           ^^^^^^^^^ array literal. This type is incompatible with the expected param type of
581:     constructor(iterable?: Iterable<T>): void;
                                ^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/core.js:581
  Property `@@iterator` is incompatible:
    197:     @@iterator(): Iterator<T>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with. See lib: <BUILTINS>/core.js:197
    503:     @@iterator(): $Iterator<Yield,Return,Next>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:503
      The return is incompatible:
        197:     @@iterator(): Iterator<T>;
                               ^^^^^^^^^^^ $Iterator. Has some incompatible type argument with. See lib: <BUILTINS>/core.js:197
        503:     @@iterator(): $Iterator<Yield,Return,Next>;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $Iterator. See lib: <BUILTINS>/core.js:503
          Type argument `Yield` is incompatible:
             19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                        ^ number. This type is incompatible with
            580: declare class WeakSet<T: Object> {
                                          ^^^^^^ object type. See lib: <BUILTINS>/core.js:580

Error: weakset.js:19
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                           ^^^^^^^^^ array literal. This type is incompatible with the expected param type of
581:     constructor(iterable?: Iterable<T>): void;
                                ^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/core.js:581
  Property `@@iterator` is incompatible:
    197:     @@iterator(): Iterator<T>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with. See lib: <BUILTINS>/core.js:197
    503:     @@iterator(): $Iterator<Yield,Return,Next>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:503
      The return is incompatible:
        197:     @@iterator(): Iterator<T>;
                               ^^^^^^^^^^^ $Iterator. Has some incompatible type argument with. See lib: <BUILTINS>/core.js:197
        503:     @@iterator(): $Iterator<Yield,Return,Next>;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $Iterator. See lib: <BUILTINS>/core.js:503
          Type argument `Yield` is incompatible:
             19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                           ^ number. This type is incompatible with
            580: declare class WeakSet<T: Object> {
                                          ^^^^^^ object type. See lib: <BUILTINS>/core.js:580

Error: weakset.js:19
 19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                           ^^^^^^^^^ array literal. This type is incompatible with the expected param type of
581:     constructor(iterable?: Iterable<T>): void;
                                ^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/core.js:581
  Property `@@iterator` is incompatible:
    197:     @@iterator(): Iterator<T>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^ function type. This type is incompatible with. See lib: <BUILTINS>/core.js:197
    503:     @@iterator(): $Iterator<Yield,Return,Next>;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:503
      The return is incompatible:
        197:     @@iterator(): Iterator<T>;
                               ^^^^^^^^^^^ $Iterator. Has some incompatible type argument with. See lib: <BUILTINS>/core.js:197
        503:     @@iterator(): $Iterator<Yield,Return,Next>;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $Iterator. See lib: <BUILTINS>/core.js:503
          Type argument `Yield` is incompatible:
             19: let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                              ^ number. This type is incompatible with
            580: declare class WeakSet<T: Object> {
                                          ^^^^^^ object type. See lib: <BUILTINS>/core.js:580

Error: weakset.js:36
 36: let ws5 = new WeakSet(numbers()); // error, must be objects
                           ^^^^^^^^^ $Iterable. This type is incompatible with the expected param type of
581:     constructor(iterable?: Iterable<T>): void;
                                ^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/core.js:581
  Type argument `Yield` is incompatible:
     29: function* numbers(): Iterable<number> {
                                       ^^^^^^ number. This type is incompatible with
    580: declare class WeakSet<T: Object> {
                                  ^^^^^^ object type. See lib: <BUILTINS>/core.js:580


Found 13 errors
